@@ -1,4 +1,4 @@
-canton;community_id;organization_id;organization_name
+canton;community_id;organization_id;organization_name;latitude;longitude
 ZH;0101;00001;Aeugst am Albis
 ZH;0101;00002;Affoltern am Albis
 ZH;0101;00003;Bonstetten
